--- a/style.css
+++ b/style.css
@@ -26,3 +26,10 @@ ul.scheda li {
   margin-top: 1rem;
   font-style: italic;
 }
+
+section {
+  background: #ffffff;
+  padding: 0.8rem;
+  margin: 0.8rem 0;
+  border-radius: 10px;
+}
